@@ -1,5 +1,9 @@
 2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* music/port.hh, port.cc: Bugfixed error reporting.
+
+	* Makefile.am: Don't accept unresolved symbols in the shared library.
+
 	* music/version.hh, version.cc: New files.
 
 	* Makefile.am: Added ditto.
